--- a/web3webdeploy.config.json
+++ b/web3webdeploy.config.json
@@ -1,5 +1,5 @@
 {
   "deleteUnfishedDeploymentOnGenerate": true,
   "defaultCreate2": true,
-  "defaultSalt": "PINGPONG"
+  "defaultSalt": "plopmenz"
 }
